# KIPFIN-LABWORK

./: CMakeLists.txt
projects/Machine Learning/: Библиотека Pandas, теория и задания.ipynb  Задания по библиотеке NumPy.ipynb  Практическая работа №1.docx  Практическая работа №2.docx
projects/Machine Learning/tss_project/: README.md
projects/cpp/src/: calculator.cpp  lvl1proj2  lvl1proj2.cpp  lvl1proj3.cpp  lvl1proj4  lvl1proj4.cpp  lvl2proj2  lvl2proj3  lvl2proj3.cpp  lvl2proj4  lvl2proj4.cpp  lvl3proj1.cpp  lvl3proj1.cpp.autosave  main.cpp  test
projects/cpp_hello/: CMakeLists.txt
projects/cpp_hello/src/: calculator  calculator.cpp  leaderboard.txt  lvl1proj3  lvl1proj5  lvl1proj5.cpp  lvl2proj1  lvl2proj1.cpp  lvl2proj2.cpp  test.txt
